# mangekyou

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: benchmarking.yml  codecov.yml  publish.yml  rust.yml
mangekyou/: Cargo.toml  encoding.rs  error.rs  hash.rs  kamui_vrf.rs  lib.rs  serde_helper.rs  solana_pseudo.rs  trait.rs  utils.rs
mangekyou-cli/: Cargo.toml
mangekyou-cli/src/: ecvrf.rs  encode_cli.rs  lib.rs
mangekyou-cli/tests/: ecvrf.rs
mangekyou-derive/: Cargo.toml
mangekyou-derive/src/: lib.rs
mangekyou/benches/: ecvrf_ristretto.rs  encoding.rs  groups.rs  hash.rs
mangekyou/groups/: group_bench.rs
mangekyou/src/: encoding.rs  error.rs  hash.rs  kamui_vrf.rs  lib.rs  serde_helpers.rs  traits.rs  utils.rs
mangekyou/src/groups/: mod.rs  ristretto255.rs
mangekyou/src/groups/multiplier/: bgmw.rs  integer_utils.rs  mod.rs  windowed.rs
mangekyou/src/tests/: encoding_tests.rs  hash_tests.rs  ristretto255_tests.rs  test_helpers.rs  utils_tests.rs  vrf_tests.rs
mangekyou/src/unsecure/: hash.rs  mod.rs  signature.rs
mangekyou/src/unsecure/tests/: hash_tests.rs  unsecure_signature_tests.rs
mangekyou/tests/: hash_tests.rs  vrf_tests.rs
scripts/: changed-files.sh  get_current_version.sh  is_version_already_uploaded.sh  license_check.sh
