[workspace]
resolver = "2"
members = [
    "mangekyou",
    "mangekyou-derive",
    "mangekyou-cli",
]

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
rand = { version = "0.8.5", features = ["std"] }
serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"
typenum = "1.16.0"
zeroize = "1.3.0"
curve25519-dalek= "4.0.0-pre.0"

sha3 = "0.10.6"
digest = "0.10.6"
bcs = "0.1.4"
tracing = "0.1.37"

[patch.crates-io]
subtle = { git = "https://github.com/dalek-cryptography/subtle", rev = "b4b070c", version = "=2.4.1" }
der = { git = "https://github.com/RustCrypto/formats", package = "der", version = "^0.7.0", rev = "510b74a" }
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "127c9e9", version = "=4.0.0-pre.0" }

