[package]
name = "mangekyou-derive"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
description = "Collection of useful cryptographic macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["derive"] }
quote = "1.0.23"